--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,23 +1,16 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
-    ],
     "routes": [
       {
-        "src": "/user/(.*)",
-        "dest": "index.js"
-      },
+        "src": "/[^.]+",
+        "dest": "/",
+        "status": 200
+      }
+    ],
+    "builds": [
       {
-        "src": "/transaction/(.*)",
-        "dest": "index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "index.js"
+        "src": "package.json",
+        "use": "@vercel/static-build"
       }
     ]
   }
